<resources>
    <string name="app_name">ToDoFinal</string>
    <string name="task_title">Tarefas</string>
    <string name="title_hint">Titulo</string>
    <string name="description_hint">Descrição</string>
    <string name="data_hint">Data</string>
    <string name="hour_hint">Hora</string>
    <string name="create_task">Criar tarefa</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="label_description_new_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="empty_task_txt">Ops,Você não possui\n nenhuma tarefa</string>
</resources>